<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A1887F"
        android:orientation="vertical"
        tools:context="com.example.milhar.grocerylist.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#795548"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:ems="10"

            android:text="@string/usernamehint"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/userNameEditTexthint"
            android:inputType="textPersonName"

            android:textAlignment="center" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:ems="10"

            android:text="@string/userEmail"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/userEmailIdHint"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/textView"
            style="@style/HeadersText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="10dp"

            android:text="@string/toppingsheader" />

        <CheckBox
            android:id="@+id/checkBoxState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:paddingLeft="10dp"
            android:text="@string/whipped_creamheader"
            android:textAllCaps="true"


            />

        <CheckBox
            android:id="@+id/checkChocolateBoxState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:paddingLeft="10dp"
            android:text="@string/chocolate"
            android:textAllCaps="true"


            />


        <TextView
            style="@style/HeadersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/order" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increm"
                android:textSize="22sp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:background="#3E2723"
                android:onClick="increment"
                android:text="@string/plusOrder"
                android:textAlignment="center"
                android:textColor="#ffff" />

            <TextView
                android:id="@+id/quantity"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="#3E2723"
                android:onClick="decrement"
                android:text="@string/decreOrder"
                android:textSize="22sp"



                android:textColor="#ffff" />

        </LinearLayout>


        <TextView
            android:id="@+id/myHeading"
            style="@style/HeadersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/priceHeader" />

        <TextView
            android:id="@+id/priceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="$5"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="#3E2723"
                android:onClick="giveSummary"
                android:padding="5dp"
                android:text="@string/order_summaryHeader"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="#3E2723"
                android:onClick="submit"
                android:padding="5dp"
                android:text="@string/checkoutHeader"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
